Config.json fixed

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "token": "TOKEN HERE",
-    "prefix": "k!",
-    "version": "1.0"
+    "prefix": "WRITE OWN TOKEN HERE",
+    "version": "v1.0"
 }
